# PapPercComp

./: .cproject  .gitignore  .gitmodules  CMakeLists.txt  Garbage Classifier.ipynb  README.md  README_gestures.md  architecture.py  dataloader.py  dependencies.rosinstall  main.py  package.xml  parse.py  run.sh  training.py  training_utils.py  utility.py
PapyrusVOS/: CMakeLists.txt  package.xml
PapyrusVOS/src-gen/VOSCompdef/: VOS.cpp  VOS.h
VOS/: package.xml
VOS/models/components/: VOS.compdef.uml
VOS/src-skel/VOSCompdef/: VOS_impl.cpp
VOS/src/VOSCompdef/: VOS.h
chair_manipulation_grasp_detection_advanced/: CMakeLists.txt  package.xml
chair_manipulation_grasp_detection_advanced/cfg/: grasp_database.yaml  grasp_database_config.yaml  grasp_sampler.yaml  pipeline.yaml
chair_manipulation_grasp_detection_advanced/cfg/gripper/: robotiq_2f_140.srdf  robotiq_2f_140.yaml
chair_manipulation_grasp_detection_advanced/include/chair_manipulation_grasp_detection_advanced/: collision_detection.h  contact.h  create_grasp_database_pipeline.h  exception.h  grasp.h  grasp_database.h  grasp_database_creator.h  grasp_database_element.h  grasp_detection_pipeline.h  grasp_hypothesis.h  grasp_sampler.h  grasp_synthesizer.h  gripper.h  mesh_reconstruction.h  model.h  multi_arm_grasp.h  nonrigid_transform.h  point_cloud_preprocessor.h  point_cloud_registration.h  point_cloud_segmentation.h  point_cloud_segmentation_pipeline.h  qhull_mutex.h  utils.h  wrench.h  wrench_space.h
chair_manipulation_grasp_detection_advanced/launch/: create_grasp_database.launch  grasp_detection.launch  mesh_reconstruction.launch
chair_manipulation_grasp_detection_advanced/src/: collision_detection.cpp  create_grasp_database_node.cpp  create_grasp_database_pipeline.cpp  grasp_database.cpp  grasp_database_creator.cpp  grasp_detection_node.cpp  grasp_detection_pipeline.cpp  grasp_sampler.cpp  grasp_synthesizer.cpp  gripper.cpp  mesh_reconstruction.cpp  mesh_reconstruction_pipeline.cpp  model.cpp  nonrigid_transform.cpp  point_cloud_preprocessor.cpp  point_cloud_registration.cpp  point_cloud_registration_node.cpp  point_cloud_segmentation.cpp  point_cloud_segmentation_node.cpp  point_cloud_segmentation_pipeline.cpp  qhull_mutex.cpp  utils.cpp  wrench.cpp
chair_manipulation_grasp_detection_advanced/test/: collision_detection.launch  collision_detection_test.cpp  convert_mesh_test.cpp  convert_mesh_test.launch  grasp_sampler_test.cpp  grasp_sampler_test.launch  grasp_test.cpp  grasp_test.launch  gripper_test.cpp  load_database_test.cpp  mesh_reconstruction_test.cpp  pcl_viewer.launch  point_cloud_preprocessor_test.cpp  registration_test.cpp  test_common.cpp  test_common.h  wrench_test.cpp  wrench_test.launch
chair_manipulation_grasp_planning/: CMakeLists.txt  package.xml
chair_manipulation_grasp_planning/cfg/: grasp_planner.yaml  lift_chair.yaml
chair_manipulation_grasp_planning/include/chair_manipulation_grasp_planning/: dual_grasp_planner.h  grasp_planner.h  utils.h
chair_manipulation_grasp_planning/launch/: lift.launch  lift_chair.launch  move.launch
chair_manipulation_grasp_planning/src/: dual_grasp_planner.cpp  dual_grasp_planner_node.cpp  grasp_planner.cpp  grasp_planner_action_server_node.cpp  lift_chair_node.cpp  move_node.cpp  utils.cpp
cpp/: main.cpp
domain_models/: .cproject  CMakeLists.txt  package.xml
domain_models/srv/: domain_models.servicedef.uml
embedded_segmentation/VOS/: .cproject  .project  CMakeLists.txt
face_recognition/: CMakeLists.txt
face_recognition/face_recognition/: package.xml
face_recognition/models/components/: face_recognition.compdef.notation  face_recognition.compdef.uml
face_recognition/src-gen/Face_recognitionCompdef/: Face_recognition.cpp  Face_recognition.h  New Function.cpp  New Function.h  Pkg_Face_recognitionCompdef.h
garbage_classification/cpp/: CMakeLists.txt  main.cpp
garbage_classification/ros2_ws/garbage_classification/: .project  CMakeLists.txt  package.xml
gestures_recognition/domain_models/: .cproject.orig  .project  CMakeLists.txt  package.xml.orig
gestures_recognition/domain_models/msg/: Roi.msg  domain_models.servicedef.uml
gestures_recognition/domain_models/srv/: GetInformation.srv
kitchen_utensil_classifier/KitchenUtensilClassifier/: CMakeLists.txt  package.xml
papyrus_project/SurfaceReconstruction/: .cproject  .project  CMakeLists.txt  package.xml
publishSubscribe/: CMakeLists.txt  package.xml
publishSubscribe/launch/: launch.subscriber.py
rgbd_surface_reconstruction/: CMakeLists.txt  README.md
rgbd_surface_reconstruction/include/Rgbd_surface_reconstructionCompdef/: Rgbd_surface_reconstruction_impl.h  depth_camera.h
rgbd_surface_reconstruction/launch/: launch_reconstruction_d1.py  launch_reconstruction_demo.py  launch_reconstruction_demo_2.py  launch_reconstruction_e1.py  launch_reconstruction_h1.py
rgbd_surface_reconstruction/models/components/: rgbd_surface_reconstruction.compdef.notation  rgbd_surface_reconstruction.compdef.uml
rgbd_surface_reconstruction/rgbd_surface_reconstruction/: .cproject  .project  CMakeLists.txt  package.xml
rgbd_surface_reconstruction/rgbd_surface_reconstruction/launch/: launch_reconstruction_d1_old.py  launch_reconstruction_d1_update.py  launch_reconstruction_e1_old.py  launch_reconstruction_e1_update.py  launch_reconstruction_h1_old.py  launch_reconstruction_h1_update.py
rgbd_surface_reconstruction/src-gen/Rgbd_surface_reconstructionCompdef/: Rgbd_surface_reconstruction.cpp  Rgbd_surface_reconstruction.h
rgbd_surface_reconstruction/src-skel/Rgbd_surface_reconstructionCompdef/: Rgbd_surface_reconstruction_impl.h
rgbd_surface_reconstruction/src/Rgbd_surface_reconstructionCompdef/: Rgbd_surface_reconstruction_impl.cpp  Rgbd_surface_reconstruction_impl.h  depth_camera.cpp
rhome_perception/manipulable_objects/instance_recognition/: CMakeLists.txt  package.xml
rhome_perception/perception_databases/: CMakeLists.txt  package.xml
rhome_perception/rhome_metadata/: CMakeLists.txt  package.xml
src/robot_move/: CMakeLists.txt
test/: .cproject  CMakeLists.txt  package.xml
(+490 files in other folders)
