<?xml version="1.0"?>
<package format="3">
	<name>fruit_detection</name>
	<version>0.0.0</version>
	<description>Components do identify fruits and possible diseases.</description>
	<maintainer email="philipp.seitz@tum.de">Philipp Seitz</maintainer>
	<license>Apache2.0</license>
	<url type="website">https://eclipse.org/papyrus</url>
	<author email="philipp.seitz@tum.de">Philipp Seitz</author>

	<buildtool_depend>ament_cmake_python</buildtool_depend>
	<buildtool_depend>ament_cmake</buildtool_depend>

 	<depend>rclpy</depend>
 	<build_depend>python-numpy</build_depend>
	<build_depend>python-tensorflow-pip</build_depend>
	<build_depend>python-tensorflow-hub-pip</build_depend>
	<exec_depend>python-tensorflow-pip</exec_depend>
	<exec_depend>python-tensorflow-hub-pip</exec_depend>
	<exec_depend>python-numpy</exec_depend>

	<build_depend>rclcpp</build_depend>
	<build_depend>rclcpp_lifecycle</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>rosidl_default_generators</build_depend>

	<exec_depend>rclcpp</exec_depend>
	<exec_depend>rclcpp_lifecycle</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>sensor_msgs</exec_depend>
	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
