<?xml version="1.0"?>
<package format="3">
	<name>simple</name>
	<version>0.0.0</version>
	<description>simple package</description>
	<maintainer email="maintainer@somewhere.net">maintainer</maintainer>
	<license>Apache2.0</license>
	<url type="website">https://eclipse.org/papyrus</url>
	<author email="author@somewhere.net">author@somewhere.net</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>rosidl_default_generators</buildtool_depend>

	<exec_depend>rosidl_default_runtime</exec_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
